--- a/OutputFiles/yaml/pod0.yml
+++ b/OutputFiles/yaml/pod0.yml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: pod
 metadata:
-  name: HFSM2
+  name: HFSM1
   namespace: default
+  labels:
+    type: App
 spec:
-  nodeName: host1
+  nodeName: host2
   containers:
   - image: nginx
-    name: containerHFSM2
+    name: containerHFSM1
     resources:
       requests:
         memory: 10000Mi
-        cpu: 846m
+        cpu: 200m
