--- a/OutputFiles/yaml/pod3.yml
+++ b/OutputFiles/yaml/pod3.yml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: pod
 metadata:
-  name: HFSM5
+  name: HFSM4
   namespace: default
+  labels:
+    type: App
 spec:
-  nodeName: host4
+  nodeName: host2
   containers:
   - image: nginx
-    name: containerHFSM5
+    name: containerHFSM4
     resources:
       requests:
-        memory: 60000Mi
-        cpu: 875m
+        memory: 30000Mi
+        cpu: 250m
