--- a/OutputFiles/yaml/pod5.yml
+++ b/OutputFiles/yaml/pod5.yml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: pod
 metadata:
-  name: HFSM6
+  name: HFSM1
   namespace: default
+  labels:
+    type: App
 spec:
-  nodeName: host1
+  nodeName: host6
   containers:
   - image: nginx
-    name: containerHFSM6
+    name: containerHFSM1
     resources:
       requests:
-        memory: 60000Mi
-        cpu: 250m
+        memory: 10000Mi
+        cpu: 900m
