--- a/OutputFiles/yaml/pod1.yml
+++ b/OutputFiles/yaml/pod1.yml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: pod
 metadata:
-  name: HFSM3
+  name: HFSM4
   namespace: default
+  labels:
+    type: App
 spec:
-  nodeName: host3
+  nodeName: host2
   containers:
   - image: nginx
-    name: containerHFSM3
+    name: containerHFSM4
     resources:
       requests:
-        memory: 20000Mi
-        cpu: 900m
+        memory: 30000Mi
+        cpu: 250m
