--- a/OutputFiles/yaml/pod6.yml
+++ b/OutputFiles/yaml/pod6.yml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: pod
 metadata:
-  name: HFSM7
+  name: HFSM1
   namespace: default
+  labels:
+    type: App
 spec:
-  nodeName: host2
+  nodeName: host7
   containers:
   - image: nginx
-    name: containerHFSM7
+    name: containerHFSM1
     resources:
       requests:
-        memory: 60000Mi
-        cpu: 875m
+        memory: 10000Mi
+        cpu: 200m
